--- a/index.html
+++ b/index.html
@@ -318,8 +318,14 @@
         </section>
 
         <!-- works -->
-        <section class=" section-works " id="work">
+        <section class=" section-works padd-container" id="work">
+
             <div class=" container-md ">
+                        <div class="heading-secondary--left">
+                        <h2 class="heading-secondary">
+                        <span> &lt;&frasl;&nbsp;</span>   Proyectos   
+                        </h2>
+                    </div>
                 <div class="works-container">
                     <div class="work">
                         <h2 class="work-title">Facturación Elecrónica</h2>
@@ -333,20 +339,27 @@
                             En este proyecto trabajé con la mayoria herramientas
                             descritas en la sección de Tecnologías. <br><br>
                             </p>
-                            <p>
+                            <strong>
                                 Tecnologías:
-                                <br>
-                            </p> HTML, CSS, JavaScript
+                            </strong> HTML, CSS, JavaScript
                         </div>
                     </div>
                     <div class="work">
-                        <h2 class="work-title">Business Intelligence</h2>
+                        <h2 class="work-title">Precios Históricos del Dólar en Colombia</h2>
                         <img src="images/work/lawsglue.webp" alt="Project 2" class="work-img">
                         <div class="work-description">
+                            <h3>DEMO</h3> de algunas de las <strong>tecnologías y herramientas anteriormente
+                                descritas.</strong>
+                            <br>
                             Muestra los precios históricos del dólar y hace una predicción de <strong>
-                                IA</strong> Business Intelligence.<br><br><br><br><br>
+                                IA</strong> Business Intelligence.<br>
+                            El sistema se aloja en la nube de AWS y se muestra en la siguiente sección y también esta un
+                            <strong>dashboard en quicksight</strong>, para ver esta demostración de aws, es necesario
+                            que me Contactes(por seguridad de mi información, para  visualizarla).
+
+                            <br><br>
                             <strong>Tecnologías:</strong>
-                            Python, SQL,
+                            Python, Quick Sight, RDS, IA, API.
                         </div>
                     </div>
                     <div class=" see-more-btn-box ">
@@ -363,7 +376,7 @@
 
         <!-- bi -->
         <section class=" container container-md flex-col " id="bi">
-            <div class=" heading-secondary--left ">
+            <div class=" heading-secondary--right ">
                 <h2 class=" heading-secondary ">
                     Business Intelligence<span>&nbsp;&frasl;&gt;</span>
                 </h2>
