--- a/index.html
+++ b/index.html
@@ -26,19 +26,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/generalcopy.css">
-    <link rel="stylesheet" href="css/workskillsstyles.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="./css/general.css">
+    <link rel="stylesheet" href="./css/workskillsstyles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 
-    <link rel="stylesheet" href="css/queries.css">
+    <link rel="stylesheet" href="./css/queries.css">
 
     <!-- JavaScript -->
-    <script src="js/index.js"></script>
+    <script src="./js/index.js"></script>
 </head>
 
 
 <body>
-
 
     <header class="section-header">
         <nav class="nav flex-row">
@@ -76,11 +75,11 @@
         <section class="section-home flex-row-center slide-in" id="section-home">
             <div class="container">
                 <div class="side-social-links--left">
-                    <ul class="social-links social-links--side">
+                    <ul class="social-links--side">
                         <li>
                             <a href="https://www.linkedin.com/in/dev-bi-carlosmariorivera" class="social-link"
                                 target="_blank" rel="noopener">
-                                <img src="images/favicon/linkedin.svg" alt="linkedin" class="social-icon">
+                                <img src="images/favicon/linkedin.svg" height="50px" alt="linkedin" class="social-icon">
 
                             </a>
                         </li>
@@ -143,8 +142,8 @@
                     <div class="about-box">
                         <div class="about-box--text">
                             <div class="about-me-text text" class="roboto-thin">
-                                <p>
-                                <p>Desarrollador de software con mas de 12 anos de experiencia, apasionado por la
+
+                                <p>Desarrollador de software con mas de 12 años de experiencia, apasionado por la
                                     creación de aplicaciones robustas y escalables. En el desarrollo de aplicaciones.
                                     <br><br>He trabajado en proyectos desde la etapa de diseño hasta la implementación.
                                     Experto en inteligencia de negocios. Mi objetivo es crear soluciones eficientes que
@@ -152,9 +151,7 @@
                                     <br><br> Arquitecto de soluciones con experiencia en diseño, implementación y
                                     optimización de infraestructuras en la nube. Auditor interno ISO 27001. -.-. ....
                                 </p>
-                                </p>
                             </div>
-
                         </div>
                         <div class="about-box--img ">
                             <img src="images/logo.webp" alt=" carlosrivera logo " class="about-img" />
@@ -179,22 +176,29 @@
                             <p class="skills-title">Frontend</p>
                             <div class="skills-data-box">
                                 <ul class="skills-data-list" rel="noopener">
+                                    <li class="skills-name">
+                                        <img src="images/frontend/js.svg" alt="logo de javascript" />
+                                        <p> JavaScript: Lenguaje para contenido dinámico en la web1.</p>
+                                    </li>
+
+                                    <li class="skills-name">
+                                        <img src="images/frontend/css.ico" alt="logo de css3" />
+                                        <p>CSS Estilos para páginas web1.</p>
+                                    </li>
 
                                     <li class="skills-name" rel="noopener">
-                                        <img src="images/frontend/html.webp" alt="logo de html" />
-                                        <p>HTML</p>
-                                    </li>
-                                    <li class="skills-name">
-                                        <img src="images/frontend/css3.webp" alt="logo de css3" />
-                                        <p>CSS</p>
-                                    </li>
-                                    <li class="skills-name">
-                                        <img src="images/frontend/js.webp" alt="logo de javascript" />
-                                        <p>JavaScript</p>
+                                        <img src="images/frontend/html.ico" alt="logo de html"
+                                            title="HTML - Lenguaje de marcado estándar para crear páginas web" />
+                                        <p>HTML: Lenguaje de marcado estándar para crear páginas web</p>
                                     </li>
                                     <li class="skills-name">
                                         <img src="images/frontend/react.svg" alt="logo de react" />
-                                        <p>React</p>
+                                        <p> React: Biblioteca para construir interfaces de usuario</p>
+                                    </li>
+                                    <li class="skills-name">
+                                        <img src="images/frontend/angular.ico" alt=" de angular" />
+                                        <p> <strong>Angular:</strong> es un framework de código abierto para
+                                            aplicaciones web SPA y PWA, mantenido por Google </p>
                                     </li>
                                 </ul>
                             </div>
@@ -205,23 +209,34 @@
                             <div class="skills-data-box">
                                 <ul class="skills-data-list">
                                     <li class="skills-name">
+                                        <img src="images/aws/quicksight.webp" alt="Quick Sight"></img>
+                                        <p>Quick Sight <strong>Amazon QuickSight: Visualización de datos en la
+                                                nube.</strong></p>
+                                    </li>
+
+                                    <li class="skills-name">
                                         <img src="images/aws/ec2.webp" alt="ec2">
-                                        <p>EC2</p>
+                                        <p><strong>Amazon EC2:</strong> Cómputo escalable en la nube.</p>
+                                    </li>
+                                    <li class="skills-name">
+                                        <img src="images/aws/athena.webp" alt="athena"></img>
+                                        <p>Athena: <strong> es un servicio de análisis interactivo y sin servidor que te
+                                                permite analizar datos directamente en Amazon Simple Storage Service
+                                                e.</strong></p>
                                     </li>
 
                                     <li class="skills-name">
                                         <img src="images/aws/s3.webp" alt="s3" />
-                                        <p>S3</p>
+                                        <p><strong>Amazon S3
+                                            </strong> (Simple Storage Service) es el servicio de almacenamiento de
+                                            objetos</p>
                                     </li>
 
-                                    <li class="skills-name">
-                                        <img src="images/aws/quicksight.webp" alt="Quick Sight"></img>
-                                        <p>Quick Sight</p>
-                                    </li>
+
 
                                     <li class="skills-name">
                                         <img src="images/aws/glue.webp" alt="glue"></img>
-                                        <p>glue</p>
+                                        <p><strong>AWS Glue:</strong> ETL completamente administrado.</p>
                                     </li>
                                 </ul>
                             </div>
@@ -232,15 +247,19 @@
                             <div class="skills-data-box">
                                 <ul class="skills-data-list" rel="noopener">
                                     <li class="skills-name">
-                                        <img src="images/backend/aspnet.webp" alt="ASP.NET Core ( c#, vb)" />
+                                        <img src="images/backend/netcore.svg" alt="ASP.NET Core ( c#, vb)" />
                                         <p>ASP.NET Core ( c#, vb)</p>
                                     </li>
                                     <li class="skills-name">
-                                        <img src="images/backend/python.svg" alt="logo de python" />
+                                        <img src="images/backend/python.svg" alt=" python" />
                                         <p>Python</p>
                                     </li>
                                     <li class="skills-name">
-                                        <img src="images/backend/api.svg" alt="logo de python" />
+                                        <img src="images/backend/java.svg" alt="java" />
+                                        <p>java</p>
+                                    </li>
+                                    <li class="skills-name">
+                                        <img src="images/backend/api.svg" alt="api" />
                                         <p>API Rest</p>
                                     </li>
                                     <li class="skills-name">
@@ -288,8 +307,11 @@
         <!-- Other Skills -->
         <section class=" other-skills " id="oskills">
             <div class=" container-md ">
-                <p class=" skills-title "><strong>Otras habilidades</strong> (descubre)-.-.
-                    ....</p>
+                <div class="heading-secondary--right">
+                    <h2 class="heading-secondary">
+                        <span> &lt;&frasl;&nbsp;</span>Otras habilidades</strong> (descubre)-.-.
+                    </h2>
+                </div>
                 <ul class=" other-skills-list text ">
                     <!-- Lista de otras habilidades -->
                     <li class=" other-skills-item ">
@@ -321,13 +343,13 @@
         <section class=" section-works padd-container" id="work">
 
             <div class=" container-md ">
-                        <div class="heading-secondary--left">
-                        <h2 class="heading-secondary">
-                        <span> &lt;&frasl;&nbsp;</span>   Proyectos   
-                        </h2>
-                    </div>
+                <div class="heading-secondary--left">
+                    <h2 class="heading-secondary">
+                        Proyectos <span>&nbsp;&frasl;&gt;</span>
+                    </h2>
+                </div>
                 <div class="works-container">
-                    <div class="work">
+                    <div class="work image-container">
                         <h2 class="work-title">Facturación Elecrónica</h2>
                         <img src="images/work/feproceso.webp" alt="Project 1" class="work-img">
                         <div class="work-description">
@@ -335,7 +357,7 @@
                             comunes para la emisión, recepción y procesamiento de facturas electrónicas en todo
                             el
                             mundo.
-                            <br>
+                            <br><br>
                             En este proyecto trabajé con la mayoria herramientas
                             descritas en la sección de Tecnologías. <br><br>
                             </p>
@@ -348,14 +370,14 @@
                         <h2 class="work-title">Precios Históricos del Dólar en Colombia</h2>
                         <img src="images/work/lawsglue.webp" alt="Project 2" class="work-img">
                         <div class="work-description">
-                            <h3>DEMO</h3> de algunas de las <strong>tecnologías y herramientas anteriormente
+                            <strong>Demo</strong> de algunas de las <strong>tecnologías y herramientas anteriormente
                                 descritas.</strong>
                             <br>
                             Muestra los precios históricos del dólar y hace una predicción de <strong>
                                 IA</strong> Business Intelligence.<br>
                             El sistema se aloja en la nube de AWS y se muestra en la siguiente sección y también esta un
                             <strong>dashboard en quicksight</strong>, para ver esta demostración de aws, es necesario
-                            que me Contactes(por seguridad de mi información, para  visualizarla).
+                            que me Contactes.
 
                             <br><br>
                             <strong>Tecnologías:</strong>
