--- a/index.html
+++ b/index.html
@@ -505,33 +505,33 @@
         </section>
 
         <!-- bi -->
-        <section class=" container container-md flex-col " id="bi">
+        <section class="  container-md flex-col " id="bi">
             <div class=" heading-secondary--right ">
                 <h2 class=" heading-secondary ">
                     Business Intelligence<span>&nbsp;&frasl;&gt;</span>
                 </h2>
             </div>
+            <div class="flex">
+                <a href="assets/universo/about.html " class=" link btn btn-outline " target=" _blank "
+                    rel=" noopener ">Página web
+                    generada por IA<img src="assets/universo/body.webp " alt=" universo " height=" 100px "
+                        height=" 100px " class=" flex-row-center"></a>
+                <div class=" flex-col ">
 
-            <a href="assets/universo/about.html " class=" link btn btn-outline " target=" _blank "
-                rel=" noopener ">Página web
-                generada por IA<img src="assets/universo/body.webp " alt=" universo " height=" 100px " height=" 100px "
-                    class=" image-container "></a>
-            <div class=" flex-col ">
+                    <div class=" image-container ">
 
-                <div class=" image-container ">
+                        <div class="iframe-container">
 
-                    <div class="iframe-container">
-
-                        <iframe title="bi" name=" bi frame " src=" html/bi/bi.html " width=" 70% " height=" 700 "
-                            rel=" noopener ">
-                        </iframe>
+                            <iframe title="bi" name=" bi frame " src=" html/bi/bi.html " width=" 90% " height=" 900 "
+                                rel=" noopener ">
+                            </iframe>
+                        </div>
                     </div>
+
+
+
                 </div>
-
-
-
             </div>
-
         </section>
 
         <!-- CONTACT SECTION -->
