--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
     <!-- JavaScript -->
-    <script src="js/index.js"></script>
+    <script src="./js/index.js"></script>
 </head>
 
 
@@ -91,14 +91,14 @@
 
                             </a>
                         </li>
-                        <li class="social-link">
-                            <a href="https://www.github.com/carlosmriveraz" class="social-link" target="_blank"
-                                rel="noopener">
+                           <li class="social-link">
+                            <a href="https://www.github.com/carlosmriveraz" class="social-link"
+                                target="_blank" rel="noopener">
                                 <img src="images/favicon/github.svg" height="30px" alt="github" class="social-icon">
 
                             </a>
                         </li>
-
+                    
                     </ul>
                 </div>
                 <div class="side-social-links--rigth">
@@ -158,31 +158,35 @@
                     </div>
                     <div class="about-box">
                         <div class="about-text">
-                            <div class="about-me-text text roboto-thin">
-                                <p>
-                                    <strong>Desarrollador de software</strong> Con más de 12 años de experiencia,
-                                    apasionado por la creación de aplicaciones robustas y escalables,
-                                    he trabajado en proyectos desde la etapa de diseño hasta la implementación de
+                            <div class="about-me-text text" class="roboto-thin">
+
+                                <p><strong>Desarrollador de software</strong> Con mas de 12 años de experiencia,
+                                    apasionado por la
+                                    creación de aplicaciones robustas y escalables,
+                                    he trabajado en proyectos desde la etapa de diseño hasta la implementación.de
                                     soluciones.<br><br>
-                                    <strong>Ingeniero de datos</strong> Mi objetivo es crear soluciones eficientes
-                                    que mejoren la experiencia del usuario.<br><br>
-                                    <strong>Arquitecto de soluciones</strong> Con experiencia en diseño, implementación
-                                    y
-                                    optimización de infraestructuras en la nube. Auditor interno ISO 27001.
+                                    <strong>Ingeniero de datos </strong> Mi objetivo es crear soluciones eficientes
+                                    que
+                                    mejoren la experiencia del usuario.
+                                    <br><br> <strong>Arquitecto de soluciones</strong> Con experiencia en diseño,
+                                    implementación y
+                                    optimización de infraestructuras en la nube. Auditor interno ISO 27001. -.-.
+                                    ....
                                 </p>
                             </div>
                         </div>
                         <div class="about-skills">
                             <div id="movimiento_skills">
                                 <h2>Tecnologías</h2>
-                                <div class="movimiento_skills-grid">
+
+                                <div class="movimiento_skills-grid playwrite-us">
                                     <div class="movimiento_skills-grid-skill">
                                         <img src="images/frontend/html.svg" alt="HTML">
                                         <div class="movimiento_skills-grid-skill-tooltip">HTML</div>
                                     </div>
                                     <div class="movimiento_skills-grid-skill">
-                                        <img src="images/frontend/js.svg" alt="JavaScript">
-                                        <div class="movimiento_skills-grid-skill-tooltip">JavaScript</div>
+                                        <img src="images/frontend/js.svg" alt="js">
+                                        <div class="movimiento_skills-grid-skill-tooltip">Java Script</div>
                                     </div>
                                     <div class="movimiento_skills-grid-skill">
                                         <img src="images/frontend/css.ico" alt="CSS">
@@ -197,73 +201,43 @@
                                         <div class="movimiento_skills-grid-skill-tooltip">Angular</div>
                                     </div>
                                     <div class="movimiento_skills-grid-skill">
-                                        <img src="images/aws/quicksight.webp" alt="QuickSight">
-                                        <div class="movimiento_skills-grid-skill-tooltip">QuickSight</div>
-                                    </div>
-                                    <div class="movimiento_skills-grid-skill">
-                                        <img src="images/aws/ec2.webp" alt="EC2">
-                                        <div class="movimiento_skills-grid-skill-tooltip">EC2</div>
-                                    </div>
-                                    <div class="movimiento_skills-grid-skill">
-                                        <img src="images/aws/athena.webp" alt="Athena">
-                                        <div class="movimiento_skills-grid-skill-tooltip">Athena</div>
-                                    </div>
-                                    <div class="movimiento_skills-grid-skill">
-                                        <img src="images/aws/s3.webp" alt="S3">
-                                        <div class="movimiento_skills-grid-skill-tooltip">S3</div>
-                                    </div>
-                                    <div class="movimiento_skills-grid-skill">
-                                        <img src="images/aws/glue.webp" alt="Glue">
-                                        <div class="movimiento_skills-grid-skill-tooltip">Glue</div>
-                                    </div>
-                                    <div class="movimiento_skills-grid-skill">
-                                        <img src="images/backend/netcore.svg" alt="ASP.NET Core ( c#, vb)" />
-                                        <div class="movimiento_skills-grid-skill-tooltip">netcore</div>
+                                        <img src="images/aws/quicksight.webp" alt="Quick Sight">
+                                        <div class="movimiento_skills-grid-skill-tooltip">Quick Sight</div>
 
                                     </div>
+
                                     <div class="movimiento_skills-grid-skill">
-                                        <img src="images/backend/python.svg" alt=" python" />
-                                        <div class="movimiento_skills-grid-skill-tooltip">python</div>
+                                        <img src="images/aws/ec2.webp" alt="ec2">
+                                        <div class="movimiento_skills-grid-skill-tooltip">ec2</div>
+                                    </div>
+                                    <div class="movimiento_skills-grid-skill">
+                                        <img src="images/aws/athena.webp" alt="athena">
+                                        <div class="movimiento_skills-grid-skill-tooltip">athena</div>
+
+                                    </div>
+
+                                    <div class="movimiento_skills-grid-skill">
+                                        <img src="images/aws/s3.webp" alt="s3" />
+                                        <div class="movimiento_skills-grid-skill-tooltip">s3</div>
+
                                     </div>
 
 
+
                                     <div class="movimiento_skills-grid-skill">
-                                        <img src="images/backend/java.svg" alt="java" />
-                                        <div class="movimiento_skills-grid-skill-tooltip">java</div>
-                                    </div>
-                                    <div class="movimiento_skills-grid-skill">
-                                        <img src="images/backend/api.svg" alt="api" />
-                                        <div class="movimiento_skills-grid-skill-tooltip">Api</div>
-                                    </div>
-                                    <div class="movimiento_skills-grid-skill">
-                                        <img src="images/backend/csharp_m.svg" " alt=" logo de c# " />
-                                        <p>c#</p>
-                                    </div>                         
-                                            <div class=" movimiento_skills-grid-skill">
-                                        <img src=" images/db/mysql.svg " alt=" mysql " />
-                                        <div class="movimiento_skills-grid-skill-tooltip">MySQL</div>
-                                    </div>
-                                    <div class="movimiento_skills-grid-skill">
-                                        <img src="images/db/maria.svg" alt=" maria db " />
-                                        <div class="movimiento_skills-grid-skill-tooltip">maria db</div>
-                                    </div>
-                                    <div class="movimiento_skills-grid-skill">
-                                        <img src=" images/db/file_type_sql_icon_130152.svg " alt=" Sql server " />
-                                        <div class="movimiento_skills-grid-skill-tooltip">Sql server </div>
-                                    </div>
-                                    <div class="movimiento_skills-grid-skill">
-                                        <img src="images/aws/rds.webp" alt="RDS"></img>
-                                        <div class="movimiento_skills-grid-skill-tooltip">RDS</div>
+                                        <img src="images/aws/glue.webp" alt="glue">
+                                        <div class="movimiento_skills-grid-skill-tooltip">glue</div>
                                     </div>
 
                                 </div>
                             </div>
+
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
 
+        </section>
 
         <!-- SKILLS SECTION -->
         <section class="section-skills" id="skills">
@@ -467,14 +441,14 @@
                             mundo.
                             <br><br>
                             En este proyecto trabajé con la mayoria herramientas
-                            descritas en la sección de Tecnologías. <br><br> <br>
+                            descritas en la sección de Tecnologías. <br><br>
                             </p>
                             <strong>
                                 Tecnologías:
                             </strong> HTML, CSS, JavaScript
                         </div>
                     </div>
-                    <div class="work image-container">
+                    <div class="work">
                         <h2 class="work-title">Precios Históricos del Dólar en Colombia</h2>
                         <img src="images/work/lawsglue.webp" alt="Project 2" class="work-img">
                         <div class="work-description">
@@ -485,8 +459,10 @@
                                 IA</strong> Business Intelligence.<br>
                             El sistema se aloja en la nube de AWS y se muestra en la siguiente sección y también
                             esta un
-                            <strong>dashboard en quicksight</strong>, para ver esta demostración de aws, es necesario
+                            <strong>dashboard en quicksight</strong>, para ver esta demostración de aws, es
+                            necesario
                             que me Contactes.
+
                             <br><br>
                             <strong>Tecnologías:</strong>
                             Python, Quick Sight, RDS, IA, API.
@@ -505,33 +481,33 @@
         </section>
 
         <!-- bi -->
-        <section class="  container-md flex-col " id="bi">
+        <section class=" container container-md flex-col " id="bi">
             <div class=" heading-secondary--right ">
                 <h2 class=" heading-secondary ">
                     Business Intelligence<span>&nbsp;&frasl;&gt;</span>
                 </h2>
             </div>
-            <div class="flex">
-                <a href="assets/universo/about.html " class=" link btn btn-outline " target=" _blank "
-                    rel=" noopener ">Página web
-                    generada por IA<img src="assets/universo/body.webp " alt=" universo " height=" 100px "
-                        height=" 100px " class=" flex-row-center"></a>
-                <div class=" flex-col ">
 
-                    <div class=" image-container ">
+            <a href="assets/universo/about.html " class=" link btn btn-outline " target=" _blank "
+                rel=" noopener ">Página web
+                generada por IA<img src="assets/universo/body.webp " alt=" universo " height=" 100px " height=" 100px "
+                    class=" image-container "></a>
+            <div class=" flex-col ">
 
-                        <div class="iframe-container">
+                <div class=" image-container ">
 
-                            <iframe title="bi" name=" bi frame " src=" html/bi/bi.html " width=" 90% " height=" 900 "
-                                rel=" noopener ">
-                            </iframe>
-                        </div>
+                    <div class="iframe-container">
+
+                        <iframe title="bi" name=" bi frame " src=" html/bi/bi.html " width=" 70% " height=" 700 "
+                            rel=" noopener ">
+                        </iframe>
                     </div>
-
-
-
                 </div>
+
+
+
             </div>
+
         </section>
 
         <!-- CONTACT SECTION -->
@@ -569,18 +545,18 @@
                 <div class=" container-social-links ">
                     <ul class="social-links">
                         <li>
-                            <a href="https://www.linkedin.com/in/dev-bi-carlosmariorivera" class=" social-link ">
-                                <img src="images/favicon/linkedin.svg" class="link social-icon" alt="linkedin" />
+                            <a href="https://www.linkedin.com/in/dev-bi-carlosmariorivera" class=" social-link " >
+                                <img src="images/favicon/linkedin.svg" class="link social-icon" />
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.github.com/carlosmriveraz" class=" social-link " target=" _blank ">
-                                <img src="images/favicon/github.svg" class="link social-icon" alt="github" />
+                            <a href="https://www.github.com/carlosmriveraz" class=" social-link " target=" _blank "> 
+                                <img src="images/favicon/github.svg" class="link social-icon" />
                             </a>
                         </li>
                         <li>
                             <a href=" https://github.com/carlosmriveraz " class="social-link">
-                                <img src="images/favicon/github.svg" class="link social-icon" alt="github" />
+                                <img src="images/favicon/github.svg" class="link social-icon" />
                             </a>
                         </li>
                     </ul>
